--- a/blocks/content/__section/_mobile/content__section_mobile.css
+++ b/blocks/content/__section/_mobile/content__section_mobile.css
@@ -1,5 +1,5 @@
 @media screen and (max-width: 544px) {
-  .content__section_width_mobile {
+  .content__section_mobile {
     padding-left: 20px;
     padding-right: 20px;
   }
