--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -1,4 +1,4 @@
-.elements {
+.cards {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(2, 1fr);
@@ -7,13 +7,13 @@
 }
 
 @media screen and (max-width: 896px) {
-  .elements {
+  .cards {
     grid-template-columns: repeat(2, 1fr);
   }
 }
 
 @media screen and (max-width: 544px) {
-  .elements {
+  .cards {
     grid-template-columns: 1fr;
     justify-items: center;
   }
