--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,12 +1,14 @@
 .header {
   display: flex;
   flex-direction: column;
-  padding: 0 15.625%;
+  margin: 0 15.625% 36px;
+  padding-bottom: 40px;
+  border-bottom: 1px solid rgba(84, 84, 84, 1);
 }
 
 @media screen and (max-width: 544px) {
   .header {
-    padding-left: 0;
-    padding-right: 0;
+    margin: 0 0 38px;
+    padding-bottom: 32px;
   }
 }
