--- a/pages/index.css
+++ b/pages/index.css
@@ -6,7 +6,6 @@
 @import url("../blocks/content/__section/_mobile/content__section_mobile.css");
 @import url("../blocks/header/header.css");
 @import url("../blocks/header/__logo/header__logo.css");
-@import url("../blocks/header/__line/header__line.css");
 @import url("../blocks/link/link.css");
 @import url("../blocks/button/button.css");
 @import url("../blocks/profile/profile.css");
@@ -16,13 +15,13 @@
 @import url("../blocks/profile/__edit-btn/profile__edit-btn.css");
 @import url("../blocks/profile/__job/profile__job.css");
 @import url("../blocks/profile/__add-btn/profile__add-btn.css");
-@import url("../blocks/elements/elements.css");
-@import url("../blocks/element/element.css");
-@import url("../blocks/element/__image/element__image.css");
-@import url("../blocks/element/__container/element__container.css");
-@import url("../blocks/element/__name/element__name.css");
-@import url("../blocks/element/__like-btn/element__like-btn.css");
-@import url("../blocks/element/__like-btn/_active/element__like-btn_active.css");
+@import url("../blocks/cards/cards.css");
+@import url("../blocks/card/card.css");
+@import url("../blocks/card/__image/card__image.css");
+@import url("../blocks/card/__container/card__container.css");
+@import url("../blocks/card/__name/card__name.css");
+@import url("../blocks/card/__like-btn/card__like-btn.css");
+@import url("../blocks/card/__like-btn/_active/card__like-btn_active.css");
 @import url("../blocks/popup/popup.css");
 @import url("../blocks/popup/_open/popup_open.css");
 @import url("../blocks/popup/__container/popup__container.css");
