--- a/blocks/card/__like-btn/card__like-btn.css
+++ b/blocks/card/__like-btn/card__like-btn.css
@@ -1,9 +1,9 @@
-.element__like-btn {
+.card__like-btn {
   min-width: 22px;
   box-sizing: border-box;
   padding: 0;
   font-family: inherit;
-  background-image: url("../../../images/element/like-btn.svg");
+  background-image: url("../../../images/card/like-btn.svg");
   background-repeat: no-repeat;
   background-position: center;
   background-color: white;
