--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -3,11 +3,10 @@
   background: white;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
-  max-width: 430px;
-  min-width: 282px;
+  width: 430px;
+  height: 330px;
   box-sizing: border-box;
-  width: 100%;
-  padding: 36px;
+  padding: 34px 36px 37px;
   color: black;
   display: flex;
   flex-direction: column;
@@ -15,6 +14,8 @@
   
 @media screen and (max-width: 544px) {
   .popup__form {
-    padding: 25px;
+    width: 282px;
+    height: 322px;
+    padding: 25px 22px;
   }
 }
