--- a/blocks/popup/__input-fld/popup__input-fld.css
+++ b/blocks/popup/__input-fld/popup__input-fld.css
@@ -5,6 +5,7 @@
   border: none;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   outline: none;
+  padding: 0;
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
