--- a/blocks/popup/__input-fld/popup__input-fld.css
+++ b/blocks/popup/__input-fld/popup__input-fld.css
@@ -1,11 +1,10 @@
 .popup__input-fld {
   font-family: 'Inter', Arial, sans-serif;
-  height: 27px;
   margin-bottom: 30px;
   border: none;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   outline: none;
-  padding: 0;
+  padding: 0 0 8px;
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
