--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -5,7 +5,10 @@
   bottom: 0;
   left: 0;
   background: rgba(0,0, 0, 0.5);
-  display: none;
+  display: flex;
   justify-content: center;
   align-items: center;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility linear 0.4s, opacity 0.4s linear;
 }
