--- a/pages/index.css
+++ b/pages/index.css
@@ -18,6 +18,7 @@
 @import url("../blocks/cards/cards.css");
 @import url("../blocks/card/card.css");
 @import url("../blocks/card/__image/card__image.css");
+@import url("../blocks/card/__delete-btn/card__delete-btn.css");
 @import url("../blocks/card/__container/card__container.css");
 @import url("../blocks/card/__name/card__name.css");
 @import url("../blocks/card/__like-btn/card__like-btn.css");
@@ -28,6 +29,8 @@
 @import url("../blocks/popup/__form/popup__form.css");
 @import url("../blocks/popup/__name/popup__name.css");
 @import url("../blocks/popup/__input-fld/popup__input-fld.css");
+@import url("../blocks/popup/__image/popup__image.css");
+@import url("../blocks/popup/__image-name/popup__image-name.css");
 @import url("../blocks/popup/__save-btn/popup__save-btn.css");
 @import url("../blocks/popup/__close-btn/popup__close-btn.css");
 @import url("../blocks/footer/footer.css");
