--- a/pages/index.css
+++ b/pages/index.css
@@ -29,9 +29,13 @@
 @import url("../blocks/popup/__form/popup__form.css");
 @import url("../blocks/popup/__name/popup__name.css");
 @import url("../blocks/popup/__input-fld/popup__input-fld.css");
+@import url("../blocks/popup/__input-fld/_state/popup__input-fld_state_error.css");
+@import url("../blocks/popup/__error/popup__error.css");
+@import url("../blocks/popup/__error/_visible/popup__error_visible.css");
 @import url("../blocks/popup/__image/popup__image.css");
 @import url("../blocks/popup/__image-name/popup__image-name.css");
 @import url("../blocks/popup/__save-btn/popup__save-btn.css");
+@import url("../blocks/popup/__save-btn/_disabled/popup__save-btn_disabled.css");
 @import url("../blocks/popup/__close-btn/popup__close-btn.css");
 @import url("../blocks/footer/footer.css");
 @import url("../blocks/footer/__content/footer__content.css");
