--- a/src/blocks/card/__like-btn/card__like-btn.css
+++ b/src/blocks/card/__like-btn/card__like-btn.css
@@ -1,5 +1,5 @@
 .card__like-btn {
-  min-width: 22px;
+  min-height: 22px;
   box-sizing: border-box;
   padding: 0;
   font-family: inherit;
@@ -9,5 +9,4 @@
   background-color: white;
   cursor: pointer;
   border: none;
-  margin-left: 20px;
 }
