--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -10,6 +10,7 @@
 @import url("../blocks/button/button.css");
 @import url("../blocks/profile/profile.css");
 @import url("../blocks/profile/__avatar/profile__avatar.css");
+@import url("../blocks/profile/__avatar-edit-btn/profile__avatar-edit-btn.css");
 @import url("../blocks/profile/__info/profile__info.css");
 @import url("../blocks/profile/__name/profile__name.css");
 @import url("../blocks/profile/__edit-btn/profile__edit-btn.css");
@@ -21,11 +22,14 @@
 @import url("../blocks/card/__delete-btn/card__delete-btn.css");
 @import url("../blocks/card/__container/card__container.css");
 @import url("../blocks/card/__name/card__name.css");
+@import url("../blocks/card/__like-container/card__like-container.css");
 @import url("../blocks/card/__like-btn/card__like-btn.css");
 @import url("../blocks/card/__like-btn/_active/card__like-btn_active.css");
+@import url("../blocks/card/__like-counter/card__like-counter.css");
 @import url("../blocks/popup/popup.css");
 @import url("../blocks/popup/_open/popup_open.css");
 @import url("../blocks/popup/__container/popup__container.css");
+@import url("../blocks/popup/__overlay/popup__overlay.css");
 @import url("../blocks/popup/__form/popup__form.css");
 @import url("../blocks/popup/__name/popup__name.css");
 @import url("../blocks/popup/__input-fld/popup__input-fld.css");
